crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_lanes_80.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame Effects · view: project issues (default) · space: Plugins · fetch"
" Enter detail · r refresh · ? help · q quit                                     "
" [Frontend]  Backend                                                            "
"                                1/2                                In Review 1 ›"
"┌ Todo (4) ────────────────────────────┐┌ In Progress (2) ─────────────────────┐"
"│── Alpha 3 ───────────────────────────││── Alpha 1 ───────────────────────────│"
"│  WEB-101  P3                         ││  WEB-105 ▶  P3  ⧉1                   │"
"│Example issue: the export dialog      ││Example issue: a saved filter loses   │"
"│forgets its last folder               ││its sort order                        │"
"│unassigned                            ││unassigned                            │"
"│                                      ││                                      │"
"│  WEB-102  P3                         ││── Beta 1 ────────────────────────────│"
"│Example issue: a toolbar icon is      ││  WEB-106  P3                         │"
"│blurry on a wide screen               ││Example issue: the preview pane       │"
"│unassigned                            ││flickers on resize                    │"
"│                                      ││unassigned                            │"
"│  WEB-103  P3                         ││                                      │"
"│Example issue: the undo stack drops a ││                                      │"
"│rename                                ││                                      │"
"│unassigned                            ││                                      │"
"│                                      ││                                      │"
"│── Beta 1 ────────────────────────────││                                      │"
"│  WEB-104  P3                         ││                                      │"
"│Example issue: a long list scrolls    ││                                      │"
"│past its last row                     ││                                      │"
"│unassigned                            ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
"                                                                                "
