crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_stacked_70.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame Effects · view: Canvas board · space: Plugins · fetched"
" Enter detail · r refresh · ? help · q quit                           "
"                             1/5                              Todo 1 ›"
"┌ Backlog (1) ───────────────────────────────────────────────────────┐"
"│WEB-3308  P0                                                        │"
"│Example issue: a panel is blank while an item is still loading      │"
"│                                                                    │"
"│@Example User                                                       │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
" Spaces with no project · s select · t unmapped tabs                  "
"    Beta notes (wB)                                                   "
"    Gamma docs (wC)                                                   "
"                                                                      "
