crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_stale_daemon.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"               ┌ Daemon is older than this board ───────────────────────────────────────────────────────┐               "
"               │The board daemon lacks linear.snapshot; it is older than this board.                    │               "
"               │                                                                                        │               "
"               │board 0.18.0 · daemon 0.17.0                                                            │               "
"               │                                                                                        │               "
"               │Run `board daemon stop` and reopen the board.                                           │               "
"               │                                                                                        │               "
"               │r retry · q quit                                                                        │               "
"               └────────────────────────────────────────────────────────────────────────────────────────┘               "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
